@@ -38,6 +38,7 @@
 <p>2019-05-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/ps3.c: Make PS3 static data completely const.</li>
 <li>coders/pict.c: Make PICT static data completely const.</li>
 <li>magick/error.c (ThrowException, ThrowLoggedException): Handle
 the case where some passed character strings refer to existing
