@@ -1,5 +1,7 @@
 2019-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/ps3.c: Make PS3 static data completely const.
+
 	* coders/pict.c: Make PICT static data completely const.
 
 	* magick/error.c (ThrowException, ThrowLoggedException): Handle
